# mimir

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Apptainer.install  Apptainer.python  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake.in  Doxyfile  MANIFEST.in  MimirConfig.cmake  README.md  action_8hpp.html  action_8hpp_source.html  add_8hpp.html  add_8hpp_source.html  algorithms_2astar_2event__handlers_2debug_8hpp.html  algorithms_2astar_2event__handlers_2debug_8hpp_source.html  algorithms_2astar_2event__handlers_2default_8hpp.html  algorithms_2astar_2event__handlers_2default_8hpp_source.html  algorithms_2astar_2event__handlers_2interface_8hpp.html  algorithms_2astar_2event__handlers_2interface_8hpp_source.html  algorithms_2astar_2event__handlers_2statistics_8hpp.html  algorithms_2astar_2event__handlers_2statistics_8hpp_source.html  algorithms_2astar__eager_2event__handlers_2debug_8hpp.html  algorithms_2astar__eager_2event__handlers_2debug_8hpp_source.html  algorithms_2astar__eager_2event__handlers_2default_8hpp.html  algorithms_2astar__eager_2event__handlers_2default_8hpp_source.html  algorithms_2astar__eager_2event__handlers_2interface_8hpp.html  algorithms_2astar__eager_2event__handlers_2interface_8hpp_source.html  algorithms_2astar__eager_2event__handlers_2statistics_8hpp.html  algorithms_2astar__eager_2event__handlers_2statistics_8hpp_source.html  algorithms_2astar__lazy_2event__handlers_2debug_8hpp.html  algorithms_2astar__lazy_2event__handlers_2debug_8hpp_source.html  algorithms_2astar__lazy_2event__handlers_2default_8hpp.html  algorithms_2astar__lazy_2event__handlers_2default_8hpp_source.html  algorithms_2astar__lazy_2event__handlers_2interface_8hpp.html  algorithms_2astar__lazy_2event__handlers_2interface_8hpp_source.html  (+2236 more)
benchmark/: CMakeLists.txt  profiling.cpp
dependencies/: CMakeLists.txt  CMakePresets.json
dependencies/abseil/: CMakeLists.txt
dependencies/benchmark/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt  install_boost.cmake
dependencies/capnproto/: CMakeLists.txt
dependencies/cista/: CMakeLists.txt
dependencies/clingo/: CMakeLists.txt
dependencies/flatbuffers/: CMakeLists.txt
dependencies/flatmemory/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/gtl/: CMakeLists.txt
dependencies/loki/: CMakeLists.txt
dependencies/nanobind/: CMakeLists.txt
dependencies/nauty/: CMakeLists.txt
dependencies/oneTBB/: CMakeLists.txt
dependencies/open-mpi/: CMakeLists.txt
dependencies/pybind11/: CMakeLists.txt
dependencies/range-v3/: CMakeLists.txt
dependencies/souffle/: CMakeLists.txt
dependencies/threadpool/: CMakeLists.txt
dependencies/unordered_dense/: CMakeLists.txt
dependencies/valla/: CMakeLists.txt
exe/: CMakeLists.txt  admissible_chain.cpp  gfa.cpp  knowledge_base.cpp  planner.cpp  planner_astar.cpp  planner_astar_match_tree.cpp  planner_astar_mt.cpp  planner_astar_symmetries.cpp  planner_brfs.cpp  planner_gbfs.cpp  planner_iw.cpp  planner_siw.cpp  problem_class_graph.cpp  problem_class_state_space.cpp  translator.cpp  utils.hpp
exe/backup/: admissible_chain.cpp  translator.cpp
lib/: CMakeLists.txt  pymimir.cpp
python/: CMakeLists.txt  README.md  develop_bindings.py
python/examples/: astar.py  description_logics.py  dynamic_graph.py  gbfs.py  general_policies.py  graph_isomorphism.py  iw.py  iw_search.py  knowledge_base.py  ownership_semantics.py  static_graph.py  trace_rollout.py
python/src/: CMakeLists.txt  develop_bindings.py  main.cpp
python/tests/: check_free_threaded_import.py  test_wrapper.py
src/: CMakeLists.txt
src/algorithms/: kpkc.cpp  murmurhash3.cpp  nauty.cpp  nauty_dense_impl.cpp  nauty_dense_impl.hpp  nauty_impl.cpp  nauty_impl.hpp  nauty_sparse_impl.cpp  nauty_sparse_impl.hpp  nauty_utils.hpp  souffle.cpp
src/common/: filesystem.cpp  kpkc.cpp  murmurhash3.cpp  nanobind_intrusive_counter.cpp  printers.cpp  translations.cpp
src/datasets/: abstract_transition.cpp  concrete_state.cpp  concrete_transition.cpp  faithful_abstraction.cpp  formatter.cpp  generalized_color_function.cpp  generalized_state_space.cpp  global_faithful_abstraction.cpp  knowledge_base.cpp  object_graph.cpp  object_graph_pruning_strategy.cpp  problem_class_graph.cpp  problem_class_state_space.cpp  scc_abstraction.cpp  state_space.cpp  state_space_sampler.cpp  transition.cpp  transition_system.cpp  tuple_graph.cpp  tuple_graph_factory.cpp  tuple_graph_factory.hpp
src/formalism/: action.cpp  action_graph.cpp  action_schema.cpp  assignment_set.cpp  assignment_set2.cpp  atom.cpp  axiom.cpp  axiom_partitioning.cpp  axiom_stratification.cpp  binding.cpp  bitset.cpp  color_function.cpp  conditions.cpp  conjunctive_condition.cpp  consistency_graph.cpp  declarations.cpp  derived_predicate.cpp  domain.cpp  domain_builder.cpp  effect.cpp  effects.cpp  equal_to.cpp  existentially_quantified_conjunction.cpp  existentially_quantified_conjunctive_condition.cpp  factories.cpp  formatter.cpp  formatter.hpp  formatter_impl.cpp  formatter_impl.hpp  formatter_refactor.hpp  function.cpp  function_expressions.cpp  function_skeleton.cpp  generalized_problem.cpp  ground_action.cpp  ground_atom.cpp  ground_axiom.cpp  ground_conjunctive_condition.cpp  ground_effects.cpp  ground_function.cpp  (+33 more)
src/generators/: complete_state_space.cpp  flat_action_schema.cpp  goal_matcher.cpp  grounded_successor_generator.cpp  lifted_schema_successor_generator.cpp  lifted_successor_generator.cpp  state_space.cpp  successor_generator_factory.cpp
src/graphs/: certificate.cpp  color.cpp  color_function.cpp  digraph.cpp  digraph_edge.cpp  digraph_edge_colored.cpp  digraph_vertex_colored.cpp  formatter.cpp  graph_edges.cpp  graph_vertices.cpp  object_graph.cpp  object_graph_pruning_strategy.cpp  partitioning.cpp  property.cpp  tuple_graph.cpp
src/pddl/: abstract_syntax_tree.cpp  pddl_parser.cpp
src/search/: CMakeLists.txt  action.cpp  action_grounder.cpp  applicability.cpp  assignment_set_utils.cpp  axiom.cpp  axiom_grounder.cpp  batched_astar_search.cpp  dense.cpp  (+26 more)
(+3905 files in other folders)
