[build-system]
requires = [
    "setuptools>=42",
    "nanobind",
    "wheel",
    "cmake>=3.21",
    "ninja",
    "typing_extensions",
    "clingo"
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
archs = "auto64"
container-engine = "docker"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
# C++20 concepts are not supported

# musllinux-x86_64-image = "musllinux_1_1"
# musllinux-i686-image = "musllinux_1_1"
# musllinux-aarch64-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
