[build-system]
requires = [
    "setuptools>=42",
    "nanobind",
    "wheel",
    "cmake>=3.21",
    "ninja",
    "typing_extensions",
    "clingo"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
container-engine = "docker"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
